--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql2": "^1.7.0",
+    "nodemailer": "^6.3.1",
     "sequelize": "^5.21.2"
   },
   "devDependencies": {
