--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Tomatokki1!",
+    "password": "jad3fir3",
     "database": "animals_db",
     "host": "127.0.0.1",
     "port": 3306,
@@ -9,7 +9,7 @@
   },
   "test": {
     "username": "root",
-    "password": "Tomatoki1!",
+    "password": "jad3fir3",
     "database": "testdb",
     "host": "127.0.0.1",
     "port": 3306,
