--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Tomatokki1!",
+    "password": "GingerTheDog5566",
     "database": "animals_db",
     "host": "127.0.0.1",
     "port": 3306,
